8.0.0
 - C++20 is now the oldest C++ version that libpqxx supports.
 - Retired `binarystring` and its headers.  Use `blob` instead.
 - Retired result row slicing.
 - Retired `connection_base` type alias.  Use `connection`.
 - Retired `pqxx::encrypt_password()`.  Use the ones in `pqxx::connection`.
 - Assume compiler supports concepts.
 - Assume compiler supports integral conversions in `charconv`.
 - Assume compiler supports spans, ranges, and `cmp_less` etc.
 - Assume compiler supports `[[likely]]` & `[[unlikely]]`.
 - Assume compiler supports `ssize()`.
 - Assume compiler supports ISO-646 without needing `<ciso646>` header.
7.10.1
 - Fix string conversion buffer budget for arrays containing nulls. (#921)
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
 - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 - Can't pass parameters to streaming query.
 - CMake build: take libpq path from build target, not absolute path. (#964)
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
 - Deprecate `notification_receiver`; replace with "notification handlers"
 - Bump minimum CMake version to 3.12. (#851, #874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
 - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
 - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
 - Fix error-reporting crash in non-blocking connection constructor. (#894)
 - Fix buffer overrun when converting array containing nulls to string. (#906)
 - Fix nullness check for `std::optional` containing a nullable value. (#907)
 - `connection::process_notice()` no longer appends newline if missing.
7.9.2
 - Fix CMake documentation install. (#848)
 - More CMake build fix. (#869)
 - Bump gcc/clang/postgres minimum version requirements.